# Python

./: .env.example  .gitignore  .gitlab-ci.yaml  .pre-commit-config.yaml  .pylintrc  .sonarcloud.properties  Makefile  README.md  docker-compose.tests.yaml  docker-compose.yaml  logs.yaml  poetry.toml  pyproject.toml  setup.cfg  yoyo.ini
.github/workflows/: ci.yml  code-quality.yml  main.yml  python-app.yml
app/: __init__.py
app/configuration/: __init__.py  events.py  logger.py  server.py
app/internal/: __init__.py
app/internal/pkg/: __init__.py
app/internal/pkg/middlewares/: __init__.py  handle_http_exceptions.py  metrics.py  prometheus.py  token_based_verification.py  x_auth_token.py
app/internal/pkg/models/: __init__.py  routes.py
app/internal/pkg/password/: password.py
app/internal/pkg/repository/: repository.py
app/internal/pkg/services/: user.py
app/internal/repository/: __init__.py  exceptions.py  repository.py
app/internal/repository/postgresql/: __init__.py  city.py  skill.py  (+9 more)
app/internal/routes/: __init__.py  auth.py  city.py  contacts.py  country.py  direction.py  partners.py  skill.py  skill_levels.py  user.py
app/internal/services/: __init__.py  auth.py  city.py  contacts.py  country.py  direction.py  partners.py  skill.py  skill_levels.py  user.py  user_roles.py
app/pkg/: __init__.py
app/pkg/connectors/: __init__.py  base_connector.py  connector.py  http_request.py  mysql.py  postgresql.py  resources.py  resourсes.py  sqlite.py
app/pkg/containter_dispatcher/: __init__.py  wire_packages.py
app/pkg/handlers/: __init__.py  recursive_attr.py
app/pkg/jwt/: __init__.py  access.py  base.py  credentionals.py  exceptions.py  refresh.py
app/pkg/logger/: __init__.py  logger.py
app/pkg/models/: __init__.py  auth.py  refresh_token.py  user.py  user_role.py
app/pkg/otp/: otp.py
app/pkg/settings/: __init__.py  settings.py
docker/api/: Dockerfile
docker/centrifugo/: Dockerfile
docker/grafana/: Dockerfile
docker/migrations/: Dockerfile
docker/postgresql/: Dockerfile
docker/prometheus/: Dockerfile  prometheus.yml
docker/redis/: Dockerfile
docs/: conf.py  index.rst
docs/_templates/: package.rst_t
migrations/: 20220227_01_DJhOA-create-users-table.py  20220227_02_SEvNK-create-user-roles-table.py  20220921_02_T4QNa-create-refresh-tokens-table.py  20231112_01_tPfA5-skill-levels.py  20231112_02_CYMKS-skills.py  20231112_04_IxuQN-directions.py  20231112_05_knHgl-cities.py  20231112_06_vK6vZ-contacts.py  20231112_10_wPUeW-countries.py  20231113_01_boUZA-partners.py
scripts/: init.centrifugo.sh  init.postgres.sh  init.rabbitmq.sh  migrate.py  wait-for-server.sh
tests/: conftest.py  docker-compose.yaml
tests/fixtures/: settings.py  settings_fixtures.py
tests/fixtures/handlers/: equals.py
tests/fixtures/models/: auth.py  controller.py  generators.py  user.py
tests/fixtures/repository/: postgres_fixtures.py
tests/fixtures/router/: client.py  endpoints.py  responses.py
tests/fixtures/services/: services.py
tests/types/: responses.py
(+166 files in other folders)
